Changed the styling on the issue component on smaller displays

--- a/client/src/styles/_issue.scss
+++ b/client/src/styles/_issue.scss
@@ -391,6 +391,7 @@
     &__action-buttons-container {
       // display: flex;
       flex-direction: column;
+      margin-left: 10px;
       div {
         margin-bottom: 5px;
         margin-right: 0px;
