--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3667,6 +3667,7 @@ header::after {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-left: 10px;
   }
   .issue__action-buttons-container div {
     margin-bottom: 5px;
